@startuml

title __CREATURE's Class Diagram__\n

  namespace creature {
    class creature.Calabash {
        + order : int
        + Calabash()
    }
  }
  

  namespace creature {
    abstract class creature.Creature {
        + image : String
        + getposition()
        + move()
        + moveto()
        + setImage()
    }
  }
  

  namespace creature {
    class creature.Grandfather {
        # name : String
        + setName()
    }
  }
  

  namespace creature {
    class creature.Lackeys {
        # name : String
        + setName()
    }
  }
  

  namespace creature {
    class creature.Position {
        + x : int
        + y : int
        + changePosition()
        + setPositoin()
    }
  }
  

  namespace creature {
    class creature.Snake {
        # name : String
        + setName()
    }
  }
  

  creature.Calabash -up-|> creature.Creature
  creature.Creature o-- creature.Position : position
  creature.Grandfather -up-|> creature.Creature
  creature.Lackeys -up-|> creature.Creature
  creature.Snake -up-|> creature.Creature


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
